[package]
name = "dbcc"
description = "Compiles `data base CAN` (dbc) files into Rust code."
version = "2.0.0"
license = "MIT"
homepage = "https://github.com/marcelbuesing/dbcc"
repository = "https://github.com/marcelbuesing/dbcc.git"
documentation = "https://docs.rs/dbcc"
readme = "README.md"
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
keywords = ["dbc", "can", "automotive", "ecu", "socketcan"]
edition = "2018"

[[bin]]
bench = false
path = "src/main.rs"
name = "dbcc"

[badges]
travis-ci = { repository = "marcelbuesing/dbcc", branch = "dev" }

[dependencies]
can-dbc = "3.0.1"
heck = "0.3"
log = "0.4"
quote = "1.0"
proc-macro2 = "1.0"
pretty_env_logger = "0.4"
structopt = "0.3"
socketcan = "1.7"

[dependencies.nom]
version = "4.2"
features = ["verbose-errors"]

[dev-dependencies]
byteorder = "1.3"
futures = { version = "0.3", features = ["compat"] }
futures-util =  { version = "0.3", features = ["compat"] }
tokio = { version = "0.2", features = ["full"] }
tokio-socketcan-bcm = "0.2"