[package]
name = "dbcc"
description = "Compiles `data base CAN` (dbc) files into Rust code."
version = "2.2.1"
license = "MIT"
homepage = "https://github.com/marcelbuesing/dbcc"
repository = "https://github.com/marcelbuesing/dbcc.git"
documentation = "https://docs.rs/dbcc"
readme = "README.md"
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
keywords = ["dbc", "can", "automotive", "ecu", "socketcan"]
edition = "2018"

[[bin]]
bench = false
path = "src/main.rs"
name = "dbcc"

[badges]
travis-ci = { repository = "marcelbuesing/dbcc", branch = "dev" }

[dependencies]
blake2 = "0.8"
can-dbc = "3.0.2"
generic-array = "0.12"
heck = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
structopt = "0.3"
socketcan = "1.7"
typenum = "1.12"

[dependencies.nom]
version = "4.2"
features = ["verbose-errors"]

[dev-dependencies]
byteorder = "1.4"
futures = "0.3"
futures-util=  "0.3"
tokio = { version = "1.1", features = ["net", "macros", "rt-multi-thread"] }
socketcan = "1.7"
tokio-socketcan = { git = "https://github.com/marcelbuesing/tokio-socketcan.git", branch = "tokio-1.1"}
